--- a/.github/workflows/wordpress-readme-assets.yml
+++ b/.github/workflows/wordpress-readme-assets.yml
@@ -12,5 +12,5 @@ jobs:
         env:
           SVN_PASSWORD: ${{ secrets.SVN_PASSWORD }}
           SVN_USERNAME: ${{ secrets.SVN_USERNAME }}
-          SLUG: ketchup-restaurant-reservations
+          SLUG: seo-consultant
           IGNORE_OTHER_FILES: true
